fix for jdk 9